Renamed folder to better describe use

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,2 @@
 [defaults]
-inventory = my-inventory/hosts.ini  ; Adapt this to the path to your inventory file
+inventory = my-cluster/hosts.ini  ; Adapt this to the path to your inventory file
